Name:          keepalived
Version:       0.0.1
Synopsis:      Parser libraries and command-line tools for keepalived.conf
Author:        Mitsutoshi Aoe <maoe.maoe@gmail.com>
Maintainer:    Mitsutoshi Aoe <maoe.maoe@gmail.com>
Build-Type:    Simple
Cabal-Version: >=1.2
License:       BSD3
License-File:  LICENSE
Copyright:     Mitsutoshi Aoe <maoe.maoe@gmail.com>

Library
  Build-Depends:   base, network, QuickCheck, directory, mtl
                 , parsec >= 3, FileManip, filepath, pretty
  Exposed-Modules: Network.Layer2
                 , Network.Layer3
                 , Network.Layer4
                 , Text.Keepalived
                 , Text.Keepalived.Parser
                 , Text.Keepalived.Lexer
                 , Text.Keepalived.Types
                 , Text.Parsec.Perm.IO
  Hs-Source-Dirs:  src
  Ghc-Options:    -Wall -Werror -fno-warn-name-shadowing -fno-warn-type-defaults -fno-warn-orphans

Executable kc
  Main-Is:        Kc.hs
  Build-Depends:  base, network, QuickCheck, directory, mtl
                , parsec >= 3, FileManip, filepath, pretty, containers
                , syb, uniplate
  Hs-Source-Dirs: src, bin
  Ghc-Options:    -Wall -fno-warn-name-shadowing -fno-warn-type-defaults
