Name:          text-keepalived
Version:       0.0.1
Synopsis:      A parser library for keepalived.conf
Author:        Mitsutoshi Aoe <maoe.maoe@gmail.com>
Maintainer:    Mitsutoshi Aoe <maoe.maoe@gmail.com>
Build-Type:    Simple
Cabal-Version: >=1.2
License:       BSD3
License-File:  LICENSE
Copyright:     Mitsutoshi Aoe <maoe.maoe@gmail.com>

Library
  Build-Depends:   base, network, directory, mtl, parsec >= 3, filepath, FileManip, pretty, syb
  Exposed-Modules: Network.Layer2
                 , Network.Layer3
                 , Network.Layer4
                 , Text.Keepalived
                 , Text.Keepalived.Parser
                 , Text.Keepalived.Lexer
                 , Text.Keepalived.Types
                 , Text.Parsec.Perm.IO
  Hs-Source-Dirs:  src
  Ghc-Options:    -Wall -Werror -fno-warn-name-shadowing -fno-warn-type-defaults -fno-warn-orphans
